[gd_scene load_steps=21 format=3 uid="uid://dginwnftprs5d"]

[ext_resource type="Script" path="res://collectibles.gd" id="1_3fvux"]
[ext_resource type="Texture2D" uid="uid://crrt7t2di4o75" path="res://Images/Orange.png" id="2_d8lsu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ng5qn"]
atlas = ExtResource("2_d8lsu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a231v"]
atlas = ExtResource("2_d8lsu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eq46"]
atlas = ExtResource("2_d8lsu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i2mp"]
atlas = ExtResource("2_d8lsu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4b1r"]
atlas = ExtResource("2_d8lsu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_774br"]
atlas = ExtResource("2_d8lsu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nslrl"]
atlas = ExtResource("2_d8lsu")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii740"]
atlas = ExtResource("2_d8lsu")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tieq1"]
atlas = ExtResource("2_d8lsu")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m5rq"]
atlas = ExtResource("2_d8lsu")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4g6i"]
atlas = ExtResource("2_d8lsu")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rase"]
atlas = ExtResource("2_d8lsu")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_moh4p"]
atlas = ExtResource("2_d8lsu")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gwhm"]
atlas = ExtResource("2_d8lsu")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yra38"]
atlas = ExtResource("2_d8lsu")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8y05"]
atlas = ExtResource("2_d8lsu")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2pqg"]
atlas = ExtResource("2_d8lsu")
region = Rect2(512, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6fv1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng5qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a231v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eq46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i2mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4b1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_774br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nslrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii740")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tieq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m5rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4g6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rase")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moh4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gwhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yra38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8y05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2pqg")
}],
"loop": true,
"name": &"default",
"speed": 17.0
}]

[node name="collectibles" type="Area2D"]
script = ExtResource("1_3fvux")

[node name="GoldenBomb" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3.25, 3.25)
sprite_frames = SubResource("SpriteFrames_6fv1b")
frame = 3
frame_progress = 0.227281

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
